--- a/src/main/resources/templates/curvePoint/list.html
+++ b/src/main/resources/templates/curvePoint/list.html
@@ -44,8 +44,10 @@
 					<td th:text="${curvePoint.term}"></td>
 					<td th:text="${curvePoint.value}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/curvePoint/update/{id}(id=${curvePoint.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/curvePoint/delete/{id}(id=${curvePoint.id})}">Delete</a>
+						<a th:href="@{/curvePoint/update/{id}(id=${curvePoint.id})}">Edit</a>
+						<span sec:authorize="hasAuthority('ADMIN')">
+						&nbsp;|&nbsp;<a th:href="@{/curvePoint/delete/{id}(id=${curvePoint.id})}">Delete</a>
+						</span>
 					</td>
 				</tr>
 			</tbody>
