--- a/src/main/resources/templates/rating/list.html
+++ b/src/main/resources/templates/rating/list.html
@@ -48,8 +48,10 @@
 					<td th:text="${rating.fitchRating}"></td>
 					<td th:text="${rating.orderNumber}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/rating/update/{id}(id=${rating.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/rating/delete/{id}(id=${rating.id})}">Delete</a>
+						<a th:href="@{/rating/update/{id}(id=${rating.id})}">Edit</a>
+						<span sec:authorize="hasAuthority('ADMIN')">
+						&nbsp;|&nbsp;<a th:href="@{/rating/delete/{id}(id=${rating.id})}">Delete</a>
+						</span>
 					</td>
 				</tr>
 			</tbody>
