--- a/src/main/resources/templates/ruleName/list.html
+++ b/src/main/resources/templates/ruleName/list.html
@@ -49,11 +49,13 @@
 					<td th:text="${ruleName.description}"></td>
 					<td th:text="${ruleName.json}"></td>
 					<td th:text="${ruleName.template}"></td>
-					<td th:text="${ruleName.sql}"></td>
+					<td th:text="${ruleName.sqlStr}"></td>
 					<td th:text="${ruleName.sqlPart}"></td>
 					<td style="width: 15%" class="text-center">
-						<a th:href="@{/ruleName/update/{id}(id=${ruleName.id})}">Edit</a>&nbsp;|&nbsp;
-						<a th:href="@{/ruleName/delete/{id}(id=${ruleName.id})}">Delete</a>
+						<a th:href="@{/ruleName/update/{id}(id=${ruleName.id})}">Edit</a>
+						<span sec:authorize="hasAuthority('ADMIN')">
+						&nbsp;|&nbsp;<a th:href="@{/ruleName/delete/{id}(id=${ruleName.id})}">Delete</a>
+						</span>
 					</td>
 				</tr>
 			</tbody>
