--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" 
+<html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8"/>
 	<title>Home</title>
-	<link rel="stylesheet" href="../../css/bootstrap.min.css" >
+	<link rel="stylesheet" href="../../css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
@@ -22,29 +22,35 @@
 					<p class="text-danger" th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}"></p>
 				</div>
 			</div>
+
 			<div class="form-group">
 				<label for="username" class="col-sm-2 control-label">User Name</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4">
+					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4" required>
 					<p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
 				</div>
 			</div>
+
 			<div class="form-group">
 				<label for="password" class="col-sm-2 control-label">Password</label>
 				<div class="col-sm-10">
-					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4">
+					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4" required>
 					<p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 				</div>
 			</div>
+
 			<div class="form-group">
-				<label for="password" class="col-sm-2 control-label">Role</label>
-				<div class="col-sm-10">
-					<label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="ADMIN">Admin</label>
-					<label class="checkbox-inline"><input type="radio" th:field="*{role}" th:value="USER">User</label>
+				<label for="role" class="col-sm-2 control-label">Role</label>
+				<div class="col-sm-10" id="role">
+					<label class="checkbox-inline">
+						<input type="radio" th:field="*{role}" th:value="ADMIN" required>Admin
+					</label>
+					<label class="checkbox-inline">
+						<input type="radio" th:field="*{role}" th:value="USER" required>User
+					</label>
 					<p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
 				</div>
 			</div>
-
 
 			<div class="form-group">
 				<div class="col-sm-12">
