--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -53,7 +53,8 @@
 					<td th:text="${user.fullname}"></td>
 					<td th:text="${user.username}"></td>
 					<td style="width: 25%" th:text="${user.role}"></td>
-					<td sec:authorize="hasAuthority('ADMIN')" style="width: 15%" class="text-center">
+					<td th:if="${#authorization.expression('hasAuthority(''ADMIN'')')
+						or #authentication.name == user.username}">
 						<a th:href="@{/user/update/{id}(id=${user.id})}">Edit</a>&nbsp;|&nbsp;
 						<a th:href="@{/user/delete/{id}(id=${user.id})}">Delete</a>
 					</td>
