adding the id in the UserDetails ; enabling the method security soo that we can check who is allowed to use the UserService methods

--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -44,7 +44,7 @@
 					<th>Full Name</th>
 					<th>User Name</th>
 					<th>Role</th>
-					<th sec:authorize="hasAuthority('ADMIN')">Action</th>
+					<th>Action</th>
 				</tr>
 			</thead>
 			<tbody>
