--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -32,7 +32,7 @@
 			<div class="form-group">
 				<label for="password" class="col-sm-2 control-label">Password</label>
 				<div class="col-sm-10">
-					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4" required>
+					<input type="password" th:field="*{password}" id="password" placeholder="Leave empty to keep current password" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 				</div>
 			</div>
