--- a/src/main/resources/templates/user/add.html
+++ b/src/main/resources/templates/user/add.html
@@ -26,7 +26,7 @@
 			<div class="form-group">
 				<label for="username" class="col-sm-2 control-label">User Name</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4" required>
+					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
 				</div>
 			</div>
@@ -34,7 +34,7 @@
 			<div class="form-group">
 				<label for="password" class="col-sm-2 control-label">Password</label>
 				<div class="col-sm-10">
-					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4" required>
+					<input type="password" th:field="*{password}" id="password" placeholder="Password" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></p>
 				</div>
 			</div>
@@ -43,10 +43,10 @@
 				<label for="role" class="col-sm-2 control-label">Role</label>
 				<div class="col-sm-10" id="role">
 					<label class="checkbox-inline">
-						<input type="radio" th:field="*{role}" th:value="ADMIN" required>Admin
+						<input type="radio" th:field="*{role}" th:value="ADMIN">Admin
 					</label>
 					<label class="checkbox-inline">
-						<input type="radio" th:field="*{role}" th:value="USER" required>User
+						<input type="radio" th:field="*{role}" th:value="USER">User
 					</label>
 					<p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
 				</div>
