--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -18,14 +18,14 @@
 			<div class="form-group">
 				<label for="fullname" class="col-sm-2 control-label">Full Name</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{fullname}" id="fullname" placeholder="Full Name" class="col-4" required>
+					<input type="text" th:field="*{fullname}" id="fullname" placeholder="Full Name" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('fullname')}" th:errors="*{fullname}"></p>
 				</div>
 			</div>
 			<div class="form-group">
 				<label for="username" class="col-sm-2 control-label">User Name</label>
 				<div class="col-sm-10">
-					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4" required>
+					<input type="text" th:field="*{username}" id="username" placeholder="User Name" class="col-4">
 					<p class="text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></p>
 				</div>
 			</div>
@@ -40,10 +40,10 @@
 				<label for="role" class="col-sm-2 control-label">Role</label>
 				<div class="col-sm-10" id="role">
 					<label class="checkbox-inline">
-						<input type="radio" th:field="*{role}" th:value="ADMIN" name="role" required> Admin
+						<input type="radio" th:field="*{role}" th:value="ADMIN" name="role"> Admin
 					</label>
 					<label class="checkbox-inline">
-						<input type="radio" th:field="*{role}" th:value="USER" name="role" required> User
+						<input type="radio" th:field="*{role}" th:value="USER" name="role"> User
 					</label>
 					<p class="text-danger" th:if="${#fields.hasErrors('role')}" th:errors="*{role}"></p>
 				</div>
