--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,8 +25,8 @@
                     <input type="submit" value="Login" class="btn btn-primary w-100" />
                 </div>
             </form>
-            <div th:if="${param.errorMsg}">
-                <p style="color: red;" th:text="Nope"></p>
+            <div th:if="${param.errorMsg}" class="text-center">
+                <p style="color: red;" th:text="'Incorrect username or password.'"></p>
             </div>
         </div>
     </div>
